fixed errors on mobile, placholder image, minor tweaks

--- a/src/styles/sass/partials/_global.scss
+++ b/src/styles/sass/partials/_global.scss
@@ -10,6 +10,7 @@ html {
 
 body {
   background-color: $secondaryColor;
+  min-height: 100vh;
   font-family: $bodyFont;
   font-size: 1.8rem;
   color: $primaryTextColor;
