--- a/src/styles/sass/partials/_movieScreen.scss
+++ b/src/styles/sass/partials/_movieScreen.scss
@@ -1,6 +1,3 @@
-// May have to change variable names to kebab case
-// More semantic html
-
 .results {
   padding: 40px;
   background-color: $primaryColor;
@@ -131,6 +128,11 @@
   }
 }
 
+.keyword {
+  font-style: italic;
+  font-weight: bold;
+}
+
 .results {
   h6 {
     text-transform: uppercase;
@@ -167,8 +169,28 @@
   }
 }
 
+footer {
+  // background-color: $primaryColor;
+  color: $primaryTextColor;
+  text-align: center;
+  padding: 15px 0;
+  margin-top: 30px;
+
+  a {
+    font-weight: bold;
+    text-decoration: none;
+    color: $primaryTextColor;
+    transition: 0.3s all;
+
+    &:hover,
+    &:focus {
+      color: $accentColor;
+    }
+  }
+}
+
 @media (max-width: 1200px) {
-  .movie-screen img {
+  .movie-poster img {
     display: none;
   }
 
