--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -281,6 +281,7 @@ html {
 
 body {
   background-color: #6b6eec;
+  min-height: 100vh;
   font-family: "Lato", sans-serif;
   font-size: 1.8rem;
   color: #fff;
@@ -691,6 +692,11 @@ h2 {
   font-size: 2rem;
 }
 
+.keyword {
+  font-style: italic;
+  font-weight: bold;
+}
+
 .results h6 {
   text-transform: uppercase;
   text-align: right;
@@ -726,8 +732,27 @@ h2 {
   color: #141640;
 }
 
+footer {
+  color: #fff;
+  text-align: center;
+  padding: 15px 0;
+  margin-top: 30px;
+}
+
+footer a {
+  font-weight: bold;
+  text-decoration: none;
+  color: #fff;
+  -webkit-transition: 0.3s all;
+  transition: 0.3s all;
+}
+
+footer a:hover, footer a:focus {
+  color: #8ef9f4;
+}
+
 @media (max-width: 1200px) {
-  .movie-screen img {
+  .movie-poster img {
     display: none;
   }
   .gif-results,
